[package]
name = "github-oidc"
version = "0.5.0"
edition = "2024"

description = "Rust crate for validating GitHub OIDC tokens"
authors = ["Seif Mamdouh"]
license = "Apache-2.0"
repository = "https://github.com/the-cafe/github-oidc"
keywords = ["github", "oidc", "authentication"]
categories = ["authentication", "web-programming"]

[dependencies]
jsonwebtoken = "9.3"
log = "0.4"
reqwest = { version = "0.12", default-features = false }
serde = "1.0"
thiserror = "2.0"

[features]
default = ["default-tls"]

default-tls = [
    "reqwest/json",
    "reqwest/default-tls"
]

rustls-tls = [
    "reqwest/json",
    "reqwest/rustls-tls"
]